tests/snapshots/snapshots__budget_typeguard_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (976 words)

docs/conf.py
     2→from importlib.metadata import version as get_version
     4→from packaging.version import parse
src/typeguard/__init__.py
    34→config: TypeCheckConfiguration
src/typeguard/_checkers.py
    42→from typing_extensions import is_typeddict
    81→TypeCheckerCallable: TypeAlias = Callable[
    84→TypeCheckLookupCallback: TypeAlias = Callable[
    88→checker_lookup_functions: list[TypeCheckLookupCallback] = []
    89→generic_alias_types: tuple[type, ...] = (
    98→# Lifted from mypy.sharedparse
    99→BINARY_MAGIC_METHODS = {
   100→    "__add__",
   101→    "__and__",
   102→    "__cmp__",
   103→    "__divmod__",
      →…
   586→def _is_literal_type(typ: object) -> bool:
  1004→# Equality checks are applied to these
  1005→origin_type_checkers: dict[
  1006→    Any, Callable[[Any, Any, tuple[Any, ...], TypeCheckMemo], None]
  1007→] = {
  1008→    bytes: check_byteslike,
  1009→    AbstractSet: check_set,
      →…
src/typeguard/_config.py
    11→T = TypeVar("T")
    14→class ForwardRefPolicy(Enum):
    15→    """
      →…
    24→
    25→    ERROR = auto()
    26→    WARN = auto()
    27→    IGNORE = auto()
    30→class CollectionCheckStrategy(Enum):
    31→    """
      →…
    48→
    49→    FIRST_ITEM = auto()
    50→    ALL_ITEMS = auto()
    51→
    62→@dataclass
    63→class TypeCheckConfiguration:
    64→    """
    65→     You can change Typeguard's behavior with these settings.
    66→
    67→    .. attribute:: typecheck_fail_callback
    68→       :type: Callable[[TypeCheckError, TypeCheckMemo], Any]
    69→
    70→         Callable that is called when type checking fails.
    71→
    72→         Default: ``None`` (the :exc:`~.TypeCheckError` is raised directly)
    73→
    74→    .. attribute:: forward_ref_policy
    75→       :type: ForwardRefPolicy
    76→
    77→         Specifies what to do when a forward reference fails to resolve.
    78→
    79→         Default: ``WARN``
    80→
    81→    .. attribute:: collection_check_strategy
    82→       :type: CollectionCheckStrategy
    83→
    84→         Specifies how thoroughly the contents of collections (list, dict, etc.) are
    85→         type checked.
    86→
    87→         Default: ``FIRST_ITEM``
    88→
    89→    .. attribute:: debug_instrumentation
    90→       :type: bool
    91→
      →…
    97→
    98→    forward_ref_policy: ForwardRefPolicy = ForwardRefPolicy.WARN
    99→    typecheck_fail_callback: TypeCheckFailCallback | None = None
   100→    collection_check_strategy: CollectionCheckStrategy = (
   101→        CollectionCheckStrategy.FIRST_ITEM
   102→    )
   103→    debug_instrumentation: bool = False
src/typeguard/_decorators.py
src/typeguard/_exceptions.py
     5→class TypeHintWarning(UserWarning):
     6→    """
      →…
    12→class TypeCheckWarning(UserWarning):
    13→    """Emitted by typeguard's type checkers when a type mismatch is detected."""
    14→
    19→class InstrumentationWarning(UserWarning):
    20→    """Emitted when there's a problem with instrumenting a function for type checks."""
    21→
    26→class TypeCheckError(Exception):
    27→    """
      →…
    30→
src/typeguard/_functions.py
    24→T = TypeVar("T")
    25→TypeCheckFailCallback: TypeAlias = Callable[[TypeCheckError, TypeCheckMemo], Any]
src/typeguard/_importhook.py
    40→P = ParamSpec("P")
    41→T = TypeVar("T")
    44→# The name of this function is magical
    45→def _call_with_frames_removed(
    46→    f: Callable[P, T], *args: P.args, **kwargs: P.kwargs
    47→) -> T:
    48→    return f(*args, **kwargs)
    55→class TypeguardLoader(SourceFileLoader):
    56→    @staticmethod
    57→    def source_to_code(
    58→        data: Buffer | str | ast.Module | ast.Expression | ast.Interactive,
    59→        path: Buffer | str | PathLike[str] = "<string>",
    60→        *,
    61→        _optimize: int = -1,
    62→    ) -> CodeType:
    63→        if isinstance(path, (str, PathLike)):
    64→            filename = path
    65→        else:
    66→            filename = os.fsdecode(bytes(path))
    67→
    68→        if isinstance(data, (ast.Module, ast.Expression, ast.Interactive)):
    69→            module = data
    70→        else:
    71→            if isinstance(data, str):
    72→                source = data
    73→            else:
    74→                source = decode_source(data)
    75→
    76→            module = _call_with_frames_removed(
    77→                ast.parse,
    78→                source,
    79→                filename,
    80→                "exec",
    81→            )
    82→
    83→        tree = TypeguardTransformer().visit(module)
    84→        ast.fix_missing_locations(tree)
    85→
    86→        if global_config.debug_instrumentation and sys.version_info >= (3, 9):
    87→            print(
    88→                f"Source code of {path!r} after instrumentation:\n"
    89→                "----------------------------------------------",
    90→                file=sys.stderr,
    91→            )
    92→            print(ast.unparse(tree), file=sys.stderr)
    93→            print("----------------------------------------------", file=sys.stderr)
    94→
    95→        return _call_with_frames_removed(
      →…
   109→class TypeguardFinder(MetaPathFinder):
   110→    """
      →…
   119→
   156→class ImportHookManager:
   157→    """
      →…
   160→
src/typeguard/_memo.py
     8→class TypeCheckMemo:
     9→    """
      →…
    34→
    35→    __slots__ = "globals", "locals", "self_type", "config"
    36→
src/typeguard/_pytest_plugin.py
src/typeguard/_suppression.py
    15→P = ParamSpec("P")
    16→T = TypeVar("T")
src/typeguard/_transformer.py
    67→PreliminaryNameTypePair: typing.TypeAlias = tuple[Constant, "expr | None"]
    68→NameTypePair: typing.TypeAlias = tuple[Constant, expr]
   117→@dataclass
   118→class TransformMemo:
   119→    node: Module | ClassDef | FunctionDef | AsyncFunctionDef | None
   120→    parent: TransformMemo | None
   121→    path: tuple[str, ...]
   122→    joined_path: Constant = field(init=False)
   123→    return_annotation: expr | None = None
   124→    yield_annotation: expr | None = None
   125→    send_annotation: expr | None = None
   126→    is_async: bool = False
   127→    local_names: set[str] = field(init=False, default_factory=set)
   128→    imported_names: dict[str, str] = field(init=False, default_factory=dict)
   129→    ignored_names: set[str] = field(init=False, default_factory=set)
   130→    load_names: defaultdict[str, dict[str, Name]] = field(
   131→        init=False, default_factory=lambda: defaultdict(dict)
   132→    )
   133→    has_yield_expressions: bool = field(init=False, default=False)
   134→    has_return_expressions: bool = field(init=False, default=False)
   135→    memo_var_name: Name | None = field(init=False, default=None)
   136→    should_instrument: bool = field(init=False, default=True)
   137→    variable_annotations: dict[str, expr] = field(init=False, default_factory=dict)
   138→    configuration_overrides: dict[str, Any] = field(init=False, default_factory=dict)
   139→    code_inject_index: int = field(init=False, default=0)
   140→
   285→class NameCollector(NodeVisitor):
   313→class GeneratorDetector(NodeVisitor):
   314→    """Detects if a function node is a generator function."""
   315→
   316→    contains_yields: bool = False
   317→    in_root_function: bool = False
   318→
   338→class AnnotationTransformer(NodeTransformer):
   339→    type_substitutions: ClassVar[dict[str, tuple[str, str]]] = {
   340→        "builtins.dict": ("typing", "Dict"),
   341→        "builtins.list": ("typing", "List"),
   342→        "builtins.tuple": ("typing", "Tuple"),
   343→        "builtins.set": ("typing", "Set"),
   344→        "builtins.frozenset": ("typing", "FrozenSet"),
   345→    }
   346→
   488→class TypeguardTransformer(NodeTransformer):
   516→    @contextmanager
   517→    def _use_memo(
   518→        self, node: ClassDef | FunctionDef | AsyncFunctionDef
   519→    ) -> Generator[None, Any, None]:
   520→        new_memo = TransformMemo(node, self._memo, self._memo.path + (node.name,))
   521→        old_memo = self._memo
   522→        self._memo = new_memo
   523→
   524→        if isinstance(node, (FunctionDef, AsyncFunctionDef)):
   525→            new_memo.should_instrument = (
      →…
   570→    def _get_import(self, module: str, name: str) -> Name:
   580→    def _convert_annotation(self, annotation: expr | None) -> expr | None:
src/typeguard/_utils.py
   172→@final
   173→class Unset:
   174→    __slots__ = ()
   175→
tests/__init__.py
tests/conftest.py
tests/deferredannos.py
tests/dummymodule.py
    40→T = TypeVar("T", bound="DummyClass")
    41→P = ParamSpec("P")
    76→@typechecked
    77→class DummyClass(metaclass=Metaclass):
    78→    bar: str
    79→    baz: int
    80→
   117→@typechecked
   118→class Outer:
   304→@typechecked(typecheck_fail_callback=lambda exc, memo: print(exc))
   305→class OverrideClass:
   364→# Regression test for #536 - forward reference evaluation on Python 3.14
   365→class ModuleLocalClass:
   366→    """A class only available in this module's namespace, not the caller's."""
tests/dummymodule_py312.py
    16→@typechecked
    17→class ParametrizedClass[T]:
tests/mypy/negative.py
     4→@typechecked
     5→def foo(x: int) -> int:
     9→@typechecked
    10→def bar(x: int) -> int:
    14→@typeguard_ignore
    15→def non_typeguard_checked_func(x: int) -> int:
    19→@typechecked
    20→def returns_str() -> str:
    24→@typechecked
    25→def arg_type(x: int) -> str:
    29→@typechecked
    30→def ret_type() -> str:
    38→@typechecked
    39→class MyClass:
tests/mypy/positive.py
     6→@typechecked
     7→def foo(x: str) -> str:
    18→@typechecked
    19→def has_valid_arguments(x: int, y: str) -> None:
    27→@typechecked
    28→class MyClass:
    40→@typechecked
    41→def get_value_checked(c: MyClass) -> int:
    49→@typechecked
    50→def create_myclass_checked(x: int) -> MyClass:
tests/mypy/test_type_annotations.py
     8→POSITIVE_FILE = "positive.py"
     9→NEGATIVE_FILE = "negative.py"
    68→@pytest.fixture
    69→def chdir_local() -> None:
    70→    """
      →…
    78→@pytest.mark.usefixtures("chdir_local")
    79→def test_positive() -> None:
    80→    """
      →…
    86→@pytest.mark.usefixtures("chdir_local")
    87→def test_negative() -> None:
    88→    """
      →…
tests/test_checkers.py
    56→from . …
    79→P = ParamSpec("P")
tests/test_importhook.py
tests/test_instrumentation.py
    40→def _fixture_module(name: str, method: str):
tests/test_plugins.py
tests/test_pytest_plugin.py
tests/test_suppression.py
tests/test_transformer.py
tests/test_typechecked.py
tests/test_utils.py
     5→from . …
tests/test_warn_on_error.py
