tests/snapshots/snapshots__budget_typeguard_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2027 tokens)

pyproject.toml

src/typeguard/__init__.py
     1→import os
     2→from typing import Any
    34→config: TypeCheckConfiguration
    37→def __getattr__(name: str) -> Any:
    38→    if name == "config":
      →    …

src/typeguard/_checkers.py
    42→from typing_extensions import is_typeddict
    44→from ._config …
    45→from ._exceptions …
    46→from ._memo …
    47→from ._utils …
    81→TypeCheckerCallable: TypeAlias = Callable[
    84→TypeCheckLookupCallback: TypeAlias = Callable[
    88→checker_lookup_functions: list[TypeCheckLookupCallback] = []
    89→generic_alias_types: tuple[type, ...] = (
    98→# Lifted from mypy.sharedparse
    99→BINARY_MAGIC_METHODS = {
   586→def _is_literal_type(typ: object) -> bool:
  1004→# Equality checks are applied to these
  1005→origin_type_checkers: dict[

src/typeguard/_config.py
     9→    from ._functions import TypeCheckFailCallback
    11→T = TypeVar("T")
    14→class ForwardRefPolicy(Enum):
    15→    """
      →    …
    24→
    25→    ERROR = auto()
    26→    WARN = auto()
    27→    IGNORE = auto()
    30→class CollectionCheckStrategy(Enum):
    31→    """
      →    …
    48→
    49→    FIRST_ITEM = auto()
    50→    ALL_ITEMS = auto()
    51→
    52→    def iterate_samples(self, collection: Iterable[T]) -> Iterable[T]:
    53→        if self is CollectionCheckStrategy.FIRST_ITEM:
    54→            try:
      →            …
    62→@dataclass
    63→class TypeCheckConfiguration:
    64→    """
    65→     You can change Typeguard's behavior with these settings.
    66→
      →…
    97→
    98→    forward_ref_policy: ForwardRefPolicy = ForwardRefPolicy.WARN
    99→    typecheck_fail_callback: TypeCheckFailCallback | None = None
   100→    collection_check_strategy: CollectionCheckStrategy = (
   101→        CollectionCheckStrategy.FIRST_ITEM
   102→    )
   103→    debug_instrumentation: bool = False

src/typeguard/_decorators.py
    24→    def typeguard_ignore …
    32→def make_cell …
    36→def find_target_function …
    56→def instrument …
   150→def typechecked …

src/typeguard/_exceptions.py
     1→from collections import deque
     2→from typing import Deque
     5→class TypeHintWarning(UserWarning):
    12→class TypeCheckWarning(UserWarning):
    14→
    15→    def __init__(self, message: str):
    19→class InstrumentationWarning(UserWarning):
    21→
    22→    def __init__(self, message: str):
    26→class TypeCheckError(Exception):
    30→
    31→    def __init__(self, message: str):
    35→    def append_path_element(self, element: str) -> None:
    38→    def __str__(self) -> str:

src/typeguard/_functions.py
    24→T = TypeVar("T")
    25→TypeCheckFailCallback: TypeAlias = Callable[[TypeCheckError, TypeCheckMemo], Any]
    50→def check_type …
   118→def check_argument_types …
   149→def check_return_type …
   185→def check_send_type …
   216→def check_yield_type …
   245→def check_variable_assignment …
   291→def warn_on_error …

src/typeguard/_importhook.py
    17→from ._config import global_config
    18→from ._transformer import TypeguardTransformer
    40→P = ParamSpec("P")
    41→T = TypeVar("T")
    45→def _call_with_frames_removed …
    55→class TypeguardLoader(SourceFileLoader):
    56→    @staticmethod
    57→    def source_to_code(
    58→        data: Buffer | str | ast.Module | ast.Expression | ast.Interactive,
    59→        path: Buffer | str | PathLike[str] = "<string>",
    60→        *,
    61→        _optimize: int = -1,
    62→    ) -> CodeType:
    63→        if isinstance(path, (str, PathLike)):
    64→            filename = path
    65→        else:
      →        …
   109→class TypeguardFinder(MetaPathFinder):
   110→    """
      →    …
   119→
   156→class ImportHookManager:
   157→    """
      →    …
   160→

src/typeguard/_memo.py
     3→from typing …
     5→from typeguard._config …
     8→class TypeCheckMemo:
     9→    """
    10→    Contains information necessary for type checkers to do their work.
    11→
      →…
    34→
    35→    __slots__ = "globals", "locals", "self_type", "config"
    36→
    37→    def __init__ …

src/typeguard/_pytest_plugin.py
    16→def pytest_addoption(parser: Parser) -> None:
    75→def pytest_configure(config: Config) -> None:

src/typeguard/_suppression.py
    15→P = ParamSpec("P")
    16→T = TypeVar("T")
    30→def suppress_type_checks(
    31→    func: Callable[P, T] | None = None,
    32→) -> Callable[P, T] | ContextManager[None]:
    33→    """
    34→    Temporarily suppress all type checking.
    35→
      →…

src/typeguard/_transformer.py
    67→PreliminaryNameTypePair: typing.TypeAlias = tuple[Constant, "expr | None"]
    68→NameTypePair: typing.TypeAlias = tuple[Constant, expr]
   118→class TransformMemo:
   119→    node: Module | ClassDef | FunctionDef | AsyncFunctionDef | None
   120→    parent: TransformMemo | None
   121→    path: tuple[str, ...]
   122→    joined_path: Constant = field(init=False)
   123→    return_annotation: expr | None = None
   124→    yield_annotation: expr | None = None
   285→class NameCollector(NodeVisitor):
   313→class GeneratorDetector(NodeVisitor):
   315→
   338→class AnnotationTransformer(NodeTransformer):
   339→    type_substitutions: ClassVar[dict[str, tuple[str, str]]] = {
   488→class TypeguardTransformer(NodeTransformer):
   517→    def _use_memo …
   570→    def _get_import …
   580→    def _convert_annotation …

src/typeguard/_utils.py
    21→    from ._memo import TypeCheckMemo
   172→@final
   173→class Unset:
   174→    __slots__ = ()
   175→

tests/__init__.py
    43→    def method(self, a: int) -> None:

tests/conftest.py
    28→@pytest.fixture
    29→def sample_set() -> set:

tests/deferredannos.py
     4→@typechecked
     5→def uses_forwardref(x: NotYetDefined) -> NotYetDefined:  # noqa: F821
     9→class NotYetDefined:
    10→    pass

tests/dummymodule_py312.py
    16→@typechecked
    17→class ParametrizedClass[T]:
    18→    def method …

tests/mypy/negative.py
    39→class MyClass:

tests/mypy/positive.py
    28→class MyClass:

tests/test_checkers.py
    56→from . …
    79→P = ParamSpec("P")

tests/test_importhook.py
    63→def test_debug_instrumentation(monkeypatch, capsys):

tests/test_plugins.py
     6→def test_custom_type_checker(monkeypatch: MonkeyPatch) -> None:

tests/test_pytest_plugin.py
     9→@pytest.fixture
    10→def config(monkeypatch: MonkeyPatch) -> TypeCheckConfiguration:

tests/test_suppression.py
    41→def test_decorator_typechecked():
    50→def test_decorator_check_type():

tests/test_transformer.py
  1274→    def test_pep604_assign(self) -> None:

tests/test_typechecked.py
   560→def test_debug_instrumentation(monkeypatch, capsys):
