tests/snapshots/snapshots__budget_typeguard_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4013 tokens)

pyproject.toml
     1→[build-system]
     8→[project]
    33→[project.urls]
    39→[project.entry-points]
    42→[dependency-groups]
    55→[tool.setuptools.package-data]
    58→[tool.setuptools_scm]
    62→[tool.pytest.ini_options]
    68→[tool.coverage.run]
    71→[tool.coverage.report]
    78→[tool.ruff]
    81→[tool.ruff.per-file-target-version]
    84→[tool.ruff.lint]
    99→[tool.mypy]
   105→[tool.tox]
   110→[tool.tox.env_run_base]

src/typeguard/__init__.py
     1→import os
     2→from typing import Any
     4→from ._checkers import TypeCheckerCallable as TypeCheckerCallable
     5→from ._checkers import TypeCheckLookupCallback as TypeCheckLookupCallback
     6→from ._checkers import check_type_internal as check_type_internal
     7→from ._checkers import checker_lookup_functions as checker_lookup_functions
     8→from ._checkers import load_plugins as load_plugins
     9→from ._config import CollectionCheckStrategy as CollectionCheckStrategy
    10→from ._config import ForwardRefPolicy as ForwardRefPolicy
    11→from ._config import TypeCheckConfiguration as TypeCheckConfiguration
    12→from ._decorators import typechecked as typechecked
    13→from ._decorators import typeguard_ignore as typeguard_ignore
    14→from ._exceptions import InstrumentationWarning as InstrumentationWarning
    15→from ._exceptions import TypeCheckError as TypeCheckError
    16→from ._exceptions import TypeCheckWarning as TypeCheckWarning
    17→from ._exceptions import TypeHintWarning as TypeHintWarning
    18→from ._functions import TypeCheckFailCallback as TypeCheckFailCallback
    19→from ._functions import check_type as check_type
    20→from ._functions import warn_on_error as warn_on_error
    21→from ._importhook import ImportHookManager as ImportHookManager
    22→from ._importhook import TypeguardFinder as TypeguardFinder
    23→from ._importhook import install_import_hook as install_import_hook
    24→from ._memo import TypeCheckMemo as TypeCheckMemo
    25→from ._suppression import suppress_type_checks as suppress_type_checks
    26→from ._utils import Unset as Unset
    34→config: TypeCheckConfiguration
    37→def __getattr__(name: str) -> Any:

src/typeguard/_checkers.py
    42→from typing_extensions import is_typeddict
    44→from ._config import ForwardRefPolicy
    45→from ._exceptions import TypeCheckError, TypeHintWarning
    46→from ._memo import TypeCheckMemo
    47→from ._utils import evaluate_forwardref, get_stacklevel, get_type_name, qualified_name
    81→TypeCheckerCallable: TypeAlias = Callable[
    84→TypeCheckLookupCallback: TypeAlias = Callable[
    88→checker_lookup_functions: list[TypeCheckLookupCallback] = []
    89→generic_alias_types: tuple[type, ...] = (
    98→# Lifted from mypy.sharedparse
    99→BINARY_MAGIC_METHODS = {
   153→def check_callable …
   212→def check_mapping …
   247→def check_typed_dict …
   305→def check_list …
   324→def check_sequence …
   343→def check_set …
   365→def check_tuple …
   423→def check_union …
   447→def check_uniontype …
   474→def check_class …
   536→def check_newtype …
   545→def check_instance …
   555→def check_typevar …
   586→def _is_literal_type(typ: object) -> bool:
   590→def check_literal …
   623→def check_literal_string …
   632→def check_typeguard …
   641→def check_none …
   651→def check_number …
   663→def check_io …
   679→def check_signature_compatible …
   834→def check_protocol …
   885→def check_byteslike …
   895→def check_self …
   915→def check_paramspec …
   924→def check_type_internal …
  1004→# Equality checks are applied to these
  1005→origin_type_checkers: dict[
  1061→def builtin_checker_lookup …
  1099→def load_plugins …

src/typeguard/_config.py
     3→from collections.abc import Iterable
     4→from dataclasses import dataclass
     5→from enum import Enum, auto
     6→from typing import TYPE_CHECKING, TypeVar
     9→    from ._functions import TypeCheckFailCallback
    11→T = TypeVar("T")
    14→class ForwardRefPolicy(Enum):
    24→
      →…
    30→class CollectionCheckStrategy(Enum):
    48→
    52→    def iterate_samples(self, collection: Iterable[T]) -> Iterable[T]:
    62→@dataclass
    63→class TypeCheckConfiguration:
    64→    """
      →    …
    97→
    98→    forward_ref_policy: ForwardRefPolicy = ForwardRefPolicy.WARN
    99→    typecheck_fail_callback: TypeCheckFailCallback | None = None
   100→    collection_check_strategy: CollectionCheckStrategy = (
   101→        CollectionCheckStrategy.FIRST_ITEM
   102→    )
   103→    debug_instrumentation: bool = False

src/typeguard/_decorators.py
     3→import ast …
     4→import inspect …
     5→import sys …
     6→from collections.abc …
     7→from functools …
     8→from inspect …
     9→from types …
    10→from typing …
    11→from warnings …
    13→from ._config import CollectionCheckStrategy, ForwardRefPolicy, global_config
    14→from ._exceptions import InstrumentationWarning
    15→from ._functions import TypeCheckFailCallback
    16→from ._transformer import TypeguardTransformer
    17→from ._utils import Unset, function_name, get_stacklevel, is_method_of, unset
    22→    from typeshed.stdlib.types …
    24→    def typeguard_ignore …
    29→    from typing …
    32→def make_cell …
    36→def find_target_function …
    56→def instrument …
   150→def typechecked …

src/typeguard/_exceptions.py
     1→from collections import deque
     2→from typing import Deque
     5→class TypeHintWarning(UserWarning):
    12→class TypeCheckWarning(UserWarning):
    14→
    15→    def __init__(self, message: str):
    19→class InstrumentationWarning(UserWarning):
    21→
    22→    def __init__(self, message: str):
    26→class TypeCheckError(Exception):
    30→
    31→    def __init__(self, message: str):
    35→    def append_path_element(self, element: str) -> None:
    38→    def __str__(self) -> str:

src/typeguard/_functions.py
     3→import sys …
     4→import warnings …
     5→from collections.abc …
     6→from typing …
     8→from . …
     9→from ._checkers …
    10→from ._config …
    15→from ._exceptions …
    16→from ._memo …
    17→from ._utils …
    20→    from typing …
    22→    from typing_extensions …
    24→T = TypeVar("T")
    25→TypeCheckFailCallback: TypeAlias = Callable[[TypeCheckError, TypeCheckMemo], Any]
    50→def check_type …
   118→def check_argument_types …
   149→def check_return_type …
   185→def check_send_type …
   216→def check_yield_type …
   245→def check_variable_assignment …
   291→def warn_on_error …

src/typeguard/_importhook.py
    17→from ._config import global_config
    18→from ._transformer import TypeguardTransformer
    40→P = ParamSpec("P")
    41→T = TypeVar("T")
    45→def _call_with_frames_removed …
    51→def optimized_cache_from_source …
    55→class TypeguardLoader(SourceFileLoader):
    56→    @staticmethod
    57→    def source_to_code(
    58→        data: Buffer | str | ast.Module | ast.Expression | ast.Interactive,
    59→        path: Buffer | str | PathLike[str] = "<string>",
    60→        *,
    61→        _optimize: int = -1,
    62→    ) -> CodeType:
    99→    def exec_module …
   109→class TypeguardFinder(MetaPathFinder):
   119→
   120→    def __init__ …
   124→    def find_spec …
   138→    def should_instrument …
   156→class ImportHookManager:
   160→
   161→    def __init__ …
   164→    def __enter__ …
   167→    def __exit__ …
   175→    def uninstall …
   183→def install_import_hook …

src/typeguard/_memo.py
     3→from typing import Any
     5→from typeguard._config import TypeCheckConfiguration, global_config
     8→class TypeCheckMemo:
    34→
    37→    def __init__ …

src/typeguard/_pytest_plugin.py
    16→def pytest_addoption(parser: Parser) -> None:
    75→def pytest_configure(config: Config) -> None:

src/typeguard/_suppression.py
     3→import sys
     4→from collections.abc import Callable, Generator
     5→from contextlib import contextmanager
     6→from functools import update_wrapper
     7→from threading import Lock
     8→from typing import ContextManager, TypeVar, overload
    11→    from typing import ParamSpec
    13→    from typing_extensions import ParamSpec
    15→P = ParamSpec("P")
    16→T = TypeVar("T")
    30→def suppress_type_checks(
    31→    func: Callable[P, T] | None = None,
    32→) -> Callable[P, T] | ContextManager[None]:
    33→    """
      →    …

src/typeguard/_transformer.py
     3→import ast …
     4→import builtins …
     5→import sys …
     6→import typing …
     7→from ast …
    60→from collections …
    61→from collections.abc …
    62→from contextlib …
    63→from copy …
    64→from dataclasses …
    65→from typing …
    67→PreliminaryNameTypePair: typing.TypeAlias = tuple[Constant, "expr | None"]
    68→NameTypePair: typing.TypeAlias = tuple[Constant, expr]
   118→class TransformMemo:
   119→    node: Module | ClassDef | FunctionDef | AsyncFunctionDef | None
   120→    parent: TransformMemo | None
   121→    path: tuple[str, ...]
   141→    def __post_init__(self) -> None:
   171→    def get_unused_name(self, name: str) -> str:
   183→    def is_ignored_name(self, expression: expr | Expr | None) -> bool:
   206→    def get_memo_name(self) -> Name:
   212→    def get_import(self, module: str, name: str) -> Name:
   225→    def insert_imports(self, node: Module | FunctionDef | AsyncFunctionDef) -> None:
   238→    def name_matches(self, expression: expr | Expr | None, *names: str) -> bool:
   275→    def get_config_keywords(self) -> list[keyword]:
   285→class NameCollector(NodeVisitor):
   286→    def __init__(self) -> None:
   289→    def visit_Import(self, node: Import) -> None:
   293→    def visit_ImportFrom(self, node: ImportFrom) -> None:
   297→    def visit_Assign(self, node: Assign) -> None:
   302→    def visit_NamedExpr(self, node: NamedExpr) -> Any:
   306→    def visit_FunctionDef(self, node: FunctionDef) -> None:
   309→    def visit_ClassDef(self, node: ClassDef) -> None:
   313→class GeneratorDetector(NodeVisitor):
   319→    def visit_Yield(self, node: Yield) -> Any:
   322→    def visit_YieldFrom(self, node: YieldFrom) -> Any:
   325→    def visit_ClassDef(self, node: ClassDef) -> Any:
   328→    def visit_FunctionDef(self, node: FunctionDef | AsyncFunctionDef) -> Any:
   334→    def visit_AsyncFunctionDef(self, node: AsyncFunctionDef) -> Any:
   338→class AnnotationTransformer(NodeTransformer):
   347→    def __init__(self, transformer: TypeguardTransformer):
   352→    def visit(self, node: AST) -> Any:
   374→    def visit_BinOp(self, node: BinOp) -> Any:
   401→    def visit_Attribute(self, node: Attribute) -> Any:
   407→    def visit_Subscript(self, node: Subscript) -> Any:
   466→    def visit_Name(self, node: Name) -> Any:
   472→    def visit_Call(self, node: Call) -> Any:
   476→    def visit_Constant(self, node: Constant) -> Any:
   488→class TypeguardTransformer(NodeTransformer):
   489→    def __init__(
   490→        self, target_path: Sequence[str] | None = None, target_lineno: int | None = None
   491→    ) -> None:
   498→    def generic_visit(self, node: AST) -> AST:
   517→    def _use_memo …
   570→    def _get_import …
   580→    def _convert_annotation …
   596→    def visit_Name(self, node: Name) -> Name:
   600→    def visit_Module(self, node: Module) -> Module:
   608→    def visit_Import(self, node: Import) -> Import:
   615→    def visit_ImportFrom(self, node: ImportFrom) -> ImportFrom:
   624→    def visit_ClassDef(self, node: ClassDef) -> ClassDef | None:
   650→    def visit_FunctionDef(
   651→        self, node: FunctionDef | AsyncFunctionDef
   652→    ) -> FunctionDef | AsyncFunctionDef | None:
   913→    def visit_AsyncFunctionDef(
   914→        self, node: AsyncFunctionDef
   915→    ) -> FunctionDef | AsyncFunctionDef | None:
   918→    def visit_Return(self, node: Return) -> Return:
   945→    def visit_Yield(self, node: Yield) -> Yield | Call:
   994→    def visit_AnnAssign(self, node: AnnAssign) -> Any:
  1036→    def visit_Assign(self, node: Assign) -> Any:
  1138→    def visit_NamedExpr(self, node: NamedExpr) -> Any:
  1181→    def visit_AugAssign(self, node: AugAssign) -> Any:
  1224→    def visit_If(self, node: If) -> Any:

src/typeguard/_utils.py
     3→import inspect …
     4→import sys …
     5→from importlib …
     6→from inspect …
     7→from types …
     8→from typing …
    21→    from ._memo import TypeCheckMemo
    48→    def evaluate_forwardref(forwardref: ForwardRef, memo: TypeCheckMemo) -> Any:
    66→def get_type_name(type_: Any) -> str:
   104→def qualified_name(obj: Any, *, add_class_prefix: bool = False) -> str:
   105→    """
      →    …
   127→def function_name(func: Callable[..., Any]) -> str:
   128→    """
      →    …
   142→def resolve_reference(reference: str) -> Any:
   154→def is_method_of(obj: object, cls: type) -> bool:
   162→def get_stacklevel() -> int:
   172→@final
   173→class Unset:
   174→    __slots__ = ()
   175→
   176→    def __repr__(self) -> str:

tests/conftest.py
    29→def sample_set() -> set:

tests/dummymodule.py
    77→class DummyClass(metaclass=Metaclass):
   118→class Outer:
   305→class OverrideClass:
   365→class ModuleLocalClass:

tests/dummymodule_py312.py
    17→class ParametrizedClass[T]:

tests/mypy/negative.py
    39→class MyClass:

tests/mypy/positive.py
    28→class MyClass:

tests/test_importhook.py

tests/test_suppression.py
    41→def test_decorator_typechecked():
    50→def test_decorator_check_type():
