tests/snapshots/snapshots__budget_typeguard_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (485 words)

src/typeguard/__init__.py
    34→config: TypeCheckConfiguration
src/typeguard/_checkers.py
    81→TypeCheckerCallable: TypeAlias = Callable[
    82→    [Any, Any, Tuple[Any, ...], TypeCheckMemo], Any
    83→]
    84→TypeCheckLookupCallback: TypeAlias = Callable[
    85→    [Any, Tuple[Any, ...], Tuple[Any, ...]], Optional[TypeCheckerCallable]
    86→]
    88→checker_lookup_functions: list[TypeCheckLookupCallback] = []
    89→generic_alias_types: tuple[type, ...] = (
    90→    type(List),
    91→    type(List[Any]),
    92→    types.GenericAlias,
    93→)
    98→# Lifted from mypy.sharedparse
    99→BINARY_MAGIC_METHODS = {
   100→    "__add__",
   101→    "__and__",
   102→    "__cmp__",
   103→    "__divmod__",
   104→    "__div__",
   105→    "__eq__",
   106→    "__floordiv__",
      →…
   586→def _is_literal_type(typ: object) -> bool:
  1004→# Equality checks are applied to these
  1005→origin_type_checkers: dict[
  1006→    Any, Callable[[Any, Any, tuple[Any, ...], TypeCheckMemo], None]
  1007→] = {
  1008→    bytes: check_byteslike,
  1009→    AbstractSet: check_set,
  1010→    BinaryIO: check_io,
  1011→    Callable: check_callable,
  1012→    collections.abc.Callable: check_callable,
      →…
src/typeguard/_config.py
    11→T = TypeVar("T")
    14→class ForwardRefPolicy(Enum):
    24→
      →…
    30→class CollectionCheckStrategy(Enum):
    48→
    63→class TypeCheckConfiguration:
    97→
    98→    forward_ref_policy: ForwardRefPolicy = ForwardRefPolicy.WARN
    99→    typecheck_fail_callback: TypeCheckFailCallback | None = None
   100→    collection_check_strategy: CollectionCheckStrategy = (
   101→        CollectionCheckStrategy.FIRST_ITEM
   102→    )
   103→    debug_instrumentation: bool = False
src/typeguard/_exceptions.py
     5→class TypeHintWarning(UserWarning):
    12→class TypeCheckWarning(UserWarning):
    14→
    19→class InstrumentationWarning(UserWarning):
    21→
    26→class TypeCheckError(Exception):
    30→
src/typeguard/_functions.py
    24→T = TypeVar("T")
    25→TypeCheckFailCallback: TypeAlias = Callable[[TypeCheckError, TypeCheckMemo], Any]
src/typeguard/_importhook.py
    40→P = ParamSpec("P")
    41→T = TypeVar("T")
    44→# The name of this function is magical
    45→def _call_with_frames_removed(
    46→    f: Callable[P, T], *args: P.args, **kwargs: P.kwargs
    47→) -> T:
    55→class TypeguardLoader(SourceFileLoader):
    56→    @staticmethod
    57→    def source_to_code(
    58→        data: Buffer | str | ast.Module | ast.Expression | ast.Interactive,
    59→        path: Buffer | str | PathLike[str] = "<string>",
    60→        *,
    61→        _optimize: int = -1,
    62→    ) -> CodeType:
    63→        if isinstance(path, (str, PathLike)):
    64→            filename = path
    65→        else:
    66→            filename = os.fsdecode(bytes(path))
    67→
    68→        if isinstance(data, (ast.Module, ast.Expression, ast.Interactive)):
    69→            module = data
    70→        else:
    71→            if isinstance(data, str):
    72→                source = data
    73→            else:
    74→                source = decode_source(data)
    75→
      →…
   109→class TypeguardFinder(MetaPathFinder):
   119→
   156→class ImportHookManager:
   160→
src/typeguard/_memo.py
     8→class TypeCheckMemo:
    34→
src/typeguard/_suppression.py
    15→P = ParamSpec("P")
    16→T = TypeVar("T")
src/typeguard/_transformer.py
    67→PreliminaryNameTypePair: typing.TypeAlias = tuple[Constant, "expr | None"]
    68→NameTypePair: typing.TypeAlias = tuple[Constant, expr]
   118→class TransformMemo:
   119→    node: Module | ClassDef | FunctionDef | AsyncFunctionDef | None
   120→    parent: TransformMemo | None
   121→    path: tuple[str, ...]
   122→    joined_path: Constant = field(init=False)
   123→    return_annotation: expr | None = None
   124→    yield_annotation: expr | None = None
   125→    send_annotation: expr | None = None
   126→    is_async: bool = False
   127→    local_names: set[str] = field(init=False, default_factory=set)
   128→    imported_names: dict[str, str] = field(init=False, default_factory=dict)
   129→    ignored_names: set[str] = field(init=False, default_factory=set)
   130→    load_names: defaultdict[str, dict[str, Name]] = field(
   131→        init=False, default_factory=lambda: defaultdict(dict)
   132→    )
   133→    has_yield_expressions: bool = field(init=False, default=False)
   134→    has_return_expressions: bool = field(init=False, default=False)
   285→class NameCollector(NodeVisitor):
   286→    def __init__(self) -> None:
   313→class GeneratorDetector(NodeVisitor):
   315→
   338→class AnnotationTransformer(NodeTransformer):
   339→    type_substitutions: ClassVar[dict[str, tuple[str, str]]] = {
   488→class TypeguardTransformer(NodeTransformer):
   489→    def __init__(
   516→    @contextmanager
   517→    def _use_memo(
   518→        self, node: ClassDef | FunctionDef | AsyncFunctionDef
   519→    ) -> Generator[None, Any, None]:
   570→    def _get_import(self, module: str, name: str) -> Name:
   580→    def _convert_annotation(self, annotation: expr | None) -> expr | None:
src/typeguard/_utils.py
   173→class Unset:
   174→    __slots__ = ()
   175→
   176→    def __repr__(self) -> str:
   177→        return "<unset>"
