tests/snapshots/snapshots__budget_typeguard_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 0 (12 words)

__init__.py
_checkers.py
_config.py
_decorators.py
_exceptions.py
_functions.py
_importhook.py
_memo.py
_pytest_plugin.py
_suppression.py
_transformer.py
_utils.py
